@@ -1,3 +1,8 @@
+2006-11-06
+	* bug correction - noninitialized variable in ask_auth_rules and added
+	return code from xcap_get_pres_rules verification - reported and patched
+	by Bogdan
+
 2006-04-09
 	* corrected bug (failed prepare_notify in handle_new_subscription caused
 	watcher destroying but he wasn't removed from presentity's watcher list)
